<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scoreView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="120dp" />

    
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="體積 : "
        android:textSize="30dp" /> 
        
       <Spinner
        android:id="@+id/range"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
    </Spinner>
    
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="性別  : "
        android:textSize="30dp" /> 
    
   <Spinner
        android:id="@+id/sex"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
    </Spinner>
   </LinearLayout>
   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
   
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="有沒有翅尾 : "
        android:textSize="30dp" /> 
   
   <Spinner
       android:id="@+id/haveWingTail"
       android:layout_width="200dp"
       android:layout_height="wrap_content" >

    </Spinner>
   
   
   
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fotColor"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/fot_brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_brown"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/fot_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_yellow"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/fot_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_white"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/fot_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_black"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/fot_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_orange"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/fot_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_blue"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bakColor"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/bak_brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_brown"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/bak_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_yellow"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/bak_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_white"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/bak_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_black"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/bak_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_orange"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/bak_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_blue"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/bak_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_red"
            android:textSize="20dp" />
    </LinearLayout>

     
    
     <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/searchbtn" />
    
</LinearLayout>